--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,16 @@
-<div id="root"></div>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Plantilla básica de Bootstrap</title>
+  
+  </head>
+  <body>
+    <div id="root"></div>
+    <script
+      src="https://kit.fontawesome.com/f4efc249eb.js"
+      crossorigin="anonymous"
+    ></script>
+  </body>
+</html>
